elf: Refactor -mcode-density option
Replace multiple option declarations in several toolchains with a
single declaration with enablement expressions.

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -2,4 +2,5 @@ debug = Debug
 release = Release
 
 option.target = Target Processor
+option.code_density = Code density (-mcode-density)
 option.barrel_shifter = Barrel shifter (-mbarrel-shifter)
