--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -5,3 +5,4 @@ option.target = Target Processor
 option.code_density = Code density (-mcode-density)
 option.barrel_shifter = Barrel shifter (-mbarrel-shifter)
 option.norm = Bitscan instruction (-mnorm)
+option.swap = Swap instruction (-mswap)
